; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1116.c_get_bytes.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1116.c_get_bytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@b = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @get_bytes(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = and i64 %3, 255
  %5 = load i64*, i64** @b, align 8
  %6 = getelementptr inbounds i64, i64* %5, i64 0
  store i64 %4, i64* %6, align 8
  %7 = load i64, i64* %2, align 8
  %8 = ashr i64 %7, 8
  %9 = and i64 %8, 255
  %10 = load i64*, i64** @b, align 8
  %11 = getelementptr inbounds i64, i64* %10, i64 1
  store i64 %9, i64* %11, align 8
  %12 = load i64, i64* %2, align 8
  %13 = ashr i64 %12, 16
  %14 = and i64 %13, 255
  %15 = load i64*, i64** @b, align 8
  %16 = getelementptr inbounds i64, i64* %15, i64 2
  store i64 %14, i64* %16, align 8
  %17 = load i64, i64* %2, align 8
  %18 = ashr i64 %17, 24
  %19 = and i64 %18, 255
  %20 = load i64*, i64** @b, align 8
  %21 = getelementptr inbounds i64, i64* %20, i64 3
  store i64 %19, i64* %21, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
